vaultwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: auth.picklemustard.dev
      http:
        paths:
          - path: /pass/
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-service
                port:
                  number: 80
